--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ org.gradle.jvmargs=-Xmx7120M -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryErr
 org.gradle.parallel=false
 # When set to true the Gradle daemon is used to run the build. For local developer builds this is our favorite property.
 # The developer environment is optimized for speed and feedback so we nearly always run Gradle jobs with the daemon.
-org.gradle.daemon=false
+org.gradle.daemon=true
 #Wed Nov 09 11:22:24 MSK 2016
 systemProp.http.proxyHost=proxy.osmp.ru
 systemProp.http.proxyPort=3128
