--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx1024m -XX:MaxPermSize=256m
-org.gradle.jvmargs=-Xmx7120M -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8  -Dhttp.proxyHost=proxy.osmp.ru -Dhttp.proxyPort=3128 -Dhttp.nonProxyHosts='localhost|127.0.0.1|qiwi|osmp|e-port|local' -Dhttps.proxyHost=proxy.osmp.ru -Dhttps.proxyPort=3128 -Dhttps.nonProxyHosts='localhost|127.0.0.1|qiwi|osmp|e-port|local'
+org.gradle.jvmargs=-Xmx7120M -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8  -Dhttp.proxyHost=proxy.osmp.ru -Dhttp.proxyPort=3128 -Dhttp.nonProxyHosts='localhost|127.0.0.1|qiwi|osmp|e-port|local' -Dhttps.proxyHost=proxy.osmp.ru -Dhttps.proxyPort=3128 -Dhttps.nonProxyHosts='localhost|127.0.0.1|qiwi|osmp|e-port|local' -Dher=true
 #
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
