--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,8 @@
 import java.util.function.BiConsumer
+import io.github.httpbuilderng.http.HttpTask
+
+import java.util.function.BiFunction
+import groovyx.net.http.*
 
 apply plugin: 'com.android.application'
 
@@ -6,22 +10,15 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: "io.github.http-builder-ng.http-plugin"
+
 android {
     project.properties.forEach(new BiConsumer<String, Object>() {
         @Override
         void accept(String s, Object o) {
-            println("Has property: " + s + " :: " + o + '\n\n\r')
-
+//            println("Has property: " + s + " :: " + o + '\n\n\r')
         }
     })
-
-//    System.getProperties("").forEach(new BiConsumer<Object, Object>() {
-//        @Override
-//        void accept(Object o, Object o2) {
-////            println("Has property: " + s + " :: " + o + '\n\n\r')
-//        }
-//    })
-    println("Has property: " + System.getProperty("her"))
 
     compileSdkVersion 26
     defaultConfig {
@@ -63,4 +60,26 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxandroid:${rxandroid2}"
     implementation "io.reactivex.rxjava2:rxjava:${rxjava2}"
     implementation 'com.squareup.picasso:picasso:2.71828'
+}
+
+http {
+    library = 'apache'
+}
+
+task notify(type:HttpTask){
+    config {
+        request.uri = 'https://api.ipify.org?format=json'
+    }
+    get {
+        request.uri.path = '/'
+        response.success(new BiFunction<FromServer, Object, Object>() {
+
+            @Override
+            Object apply(FromServer fromServer, Object o) {
+                println("STATUS CODE:" + fromServer.statusCode)
+                return o;
+            }
+
+        })
+    }
 }
