--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+apply plugin: "io.github.http-builder-ng.http-plugin"
+
 buildscript {
     ext.kotlin_version = '1.1.51'
     ext.support_library = '26.1.0'
@@ -10,14 +12,16 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "gradle.plugin.io.github.http-builder-ng:http-plugin:0.1.1"
     }
+
 }
 
 allprojects {
